알람 설정 화면에서 진동 설정에 따른 진동 켬끔 구현. 벨소리 종류를 모든 알림/벨소리로 변경.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,8 +21,10 @@
 
         <activity android:name=".AlarmSetupActivity"/>
         <!-- End -->
-
-
+        
     </application>
+
+    <uses-permission-sdk-23 android:name="android.permission.VIBRATE"/>
+    <permission android:name="android.permission.VIBRATE"/>
 
 </manifest>
