날짜 선택 DialogPreference 구현 (값은 Long 타입)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,8 @@
         
     </application>
 
-    <uses-permission-sdk-23 android:name="android.permission.VIBRATE"/>
     <permission android:name="android.permission.VIBRATE"/>
+    <uses-permission android:name="android.permission.VIBRATE"/>
+    <uses-permission-sdk-23 android:name="android.permission.VIBRATE"/>
 
 </manifest>
