--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,8 @@
         android:theme="@style/AppTheme">
 
         <!-- Activities -->
+        <activity android:name=".PermissionsRequestActivity"/>
+
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -21,14 +23,19 @@
 
         <activity android:name=".AlarmSetupActivity"/>
         <!-- End -->
-        
+
     </application>
 
     <permission android:name="android.permission.VIBRATE"/>
     <permission android:name="android.permission.READ_CONTACTS"/>
+    <permission android:name="android.permission.CALL_PHONE"/>
     <uses-permission android:name="android.permission.VIBRATE"/>
     <uses-permission android:name="android.permission.READ_CONTACTS"/>
+    <uses-permission android:name="android.permission.CALL_PHONE"/>
+    <uses-permission android:name="android.permission.SEND_SMS"/>
     <uses-permission-sdk-23 android:name="android.permission.VIBRATE"/>
     <uses-permission-sdk-23 android:name="android.permission.READ_CONTACTS"/>
+    <uses-permission-sdk-23 android:name="android.permission.CALL_PHONE"/>
+    <uses-permission-sdk-23 android:name="android.permission.SEND_SMS"/>
 
 </manifest>
